[Go] app-info endpoint
- set version and build info at build-time
- remove some of the "stuttering" from variable names

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,3 +7,10 @@ test-verbose:
 	go test -v -race ./... | egrep -v '^[?].*\[no test files\]$$'
 run:
 	go run main.go
+build: test
+	go build -ldflags "\
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.Version=0.0.1' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.BuildUser=$$(id -u -n)' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.BuildTime=$$(date)' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.Commit=$$(git rev-parse HEAD)' \
+	" -o igo-repo-backend
