[Go] Consolidat build-info

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -9,8 +9,8 @@ run:
 	go run main.go
 build: test
 	go build -ldflags "\
-		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.Version=0.0.1' \
-		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.BuildUser=$$(id -u -n)' \
-		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.BuildTime=$$(date)' \
-		-X 'github.com/pdkovacs/igo-repo/backend/pkg/config.Commit=$$(git rev-parse HEAD)' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/build.version=0.0.1' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/build.user=$$(id -u -n)' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/build.time=$$(date)' \
+		-X 'github.com/pdkovacs/igo-repo/backend/pkg/build.commit=$$(git rev-parse HEAD)' \
 	" -o igo-repo-backend
