[Go] fix make targets' dependencies

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,13 +1,13 @@
 .PHONY: clean test run
 clean:
 	go clean -testcache
-test:
+test: build
 	go test -race ./...
-test-verbose:
+test-verbose: build
 	go test -v -race ./...
 run:
 	go run main.go
-build: test
+build:
 	go build -ldflags "\
 		-X 'github.com/pdkovacs/igo-repo/backend/pkg/build.version=0.0.1' \
 		-X 'github.com/pdkovacs/igo-repo/backend/pkg/build.user=$$(id -u -n)' \
