[API] TestPOSTShouldFailWith403WithoutCREATE_ICONPrivilegeTest - INPRGRSS

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,9 +2,9 @@
 clean:
 	go clean -testcache
 test: build
-	go test -race ./...
+	go test ./...
 test-verbose: build
-	go test -v -race ./...
+	go test -v ./...
 run:
 	go run cmd/main.go
 build:
