--- a/deployments/docker/Dockerfile
+++ b/deployments/docker/Dockerfile
@@ -1,8 +1,10 @@
-FROM node:carbon
-WORKDIR /usr/src/app
-COPY dist/ ./
-WORKDIR /usr/src/app/backend
-RUN npm install --only=production
-VOLUME ["/data"]
+FROM ubuntu:20.04
+RUN apt-get update && apt-get install -y git
+RUN mkdir -p /opt/igo-repo
+WORKDIR /opt/igo-repo
+COPY igo-repo/ ./
+RUN chmod +x igo-repo
+RUN ls -la /opt/
+RUN mkdir "/data"
 EXPOSE 8080
-CMD [ "node", "app.js" ]
+CMD [ "/opt/igo-repo/igo-repo" ]
