--- a/test/oidc-contextpath-docker/dnsmasq.conf
+++ b/test/oidc-contextpath-docker/dnsmasq.conf
@@ -3,8 +3,8 @@ address=/design.test/172.29.0.4
 listen-address=127.0.0.1
 port=53
 bind-interfaces
-user=dnsmasq
-group=dnsmasq
+# user=dnsmasq
+# group=dnsmasq
 pid-file=/var/run/dnsmasq.pid
 domain-needed
 bogus-priv
@@ -15,3 +15,4 @@ no-negcache
 neg-ttl=3600
 resolv-file=/etc/resolv.dnsmasq
 no-poll
+server=8.8.8.8
