--- a/web/package.json
+++ b/web/package.json
@@ -30,34 +30,35 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/bitmover/iconrepo-client#readme",
   "devDependencies": {
-    "@blueprintjs/core": "^3.30.1",
-    "@blueprintjs/select": "^3.13.6",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "cross-env": "^5.2.1",
-    "css-loader": "^2.0.1",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "immutable": "^4.0.0-rc.12",
+    "@blueprintjs/core": "^3.51.3",
+    "@blueprintjs/select": "^3.18.10",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "immutable": "^4.0.0",
     "kind-of": ">=6.0.3",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "rimraf": "^2.7.1",
-    "sass-loader": "^9.0.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^8.0.0",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.14",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.55.0",
+    "stylus-loader": "^6.2.0",
+    "ts-loader": "^9.2.6",
     "tslint": "^5.20.1",
-    "typescript": "^3.9.7",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^4.4.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "source-map-loader": "^0.2.4"
+    "source-map-loader": "^3.0.0"
   }
 }
