--- a/web/package.json
+++ b/web/package.json
@@ -68,6 +68,7 @@
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^4.0.2",
     "normalize.css": "^8.0.1",
+    "notistack": "^2.0.5",
     "react-error-boundary": "^3.1.4",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
