--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -21,6 +21,7 @@
     ],
     "rules": {
         "quotes": [ "error", "double" ],
-        "semi": [ "error", "always" ]
+        "semi": [ "error", "always" ],
+        "react/display-name": "off"
     }
 }
