--- a/deployments/dev/nginx-auth_request/nginx.conf.template
+++ b/deployments/dev/nginx-auth_request/nginx.conf.template
@@ -1,5 +1,5 @@
 # user  nobody;
-worker_processes  1;
+worker_processes  10;
 
 error_log  /tmp/nginx-error.log debug;
 # pid   /run/nginx.pid;
@@ -10,6 +10,14 @@ events {
 
 http {
 
+    upstream iconrepo {
+        # least_conn;
+        # ip_hash;
+        # hash $cookie__oauth2_proxy consistent;
+        server $MY_IP:8091;
+        server $MY_IP:8092;
+    }
+
     # WS
     map $http_upgrade $connection_upgrade {  
         default upgrade;
@@ -19,22 +27,6 @@ http {
     server {
         listen 80 default_server;
 
-        # server_name test.nnnnn.com ;
-        # root /var/www/main/htdocs;
-
-        # Add index.php to the list if you are using PHP
-        # index index.html index.htm ;
-
-        # location / {
-        #     # First attempt to serve request as file, then
-        #     # as directory, then fall back to displaying a 404.
-        #     try_files $uri $uri/ =404;
-        #     autoindex off; 
-        #     limit_except GET HEAD POST { 
-        #         deny all; 
-        #     }
-        # }
-        
         # favicon - return 204 / no content / if doesn't exist. 
         location = /favicon.ico {
             try_files /favicon.ico  =204;
@@ -71,7 +63,7 @@ http {
             auth_request_set $token  $upstream_http_x_auth_request_access_token;
             proxy_set_header X-Access-Token $token;
             
-            proxy_pass http://$MY_IP:8091/ ;  # defined in nginx.conf
+            proxy_pass http://iconrepo/ ;  # defined in nginx.conf
             proxy_set_header Host $host ;
             proxy_set_header X-Real-IP $remote_addr ;
             proxy_http_version 1.1 ;   # back ends are not using SSL anyway...
@@ -83,6 +75,8 @@ http {
             proxy_set_header Upgrade $http_upgrade ;
             proxy_set_header Connection $connection_upgrade ; 
             proxy_cache_bypass $http_upgrade ;
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
         }
     }
 }
