[DEV] App image deployable to test k8s env

--- a/deployments/docker/Dockerfile
+++ b/deployments/docker/Dockerfile
@@ -1,5 +1,11 @@
 FROM ubuntu:20.04
-RUN apt-get update && apt-get install -y git
+
+LABEL Name="icon-repo"
+LABEL Version="1.0.0"
+
+RUN useradd -m --shell /bin/false iconrepo
+
+RUN apt-get update && apt-get install -y git && apt-get clean
 RUN mkdir -p /opt/igo-repo
 WORKDIR /opt/igo-repo
 COPY igo-repo/ ./
@@ -7,4 +13,7 @@ RUN chmod +x igo-repo
 RUN ls -la /opt/
 RUN mkdir "/data"
 EXPOSE 8080
+
+USER iconrepo
+
 CMD [ "/opt/igo-repo/igo-repo" ]
