--- a/deployments/dev/app/app.service.yaml
+++ b/deployments/dev/app/app.service.yaml
@@ -43,29 +43,7 @@ spec:
         name: iconrepo
         env:
         - name: ICON_REPO_CONFIG_FILE
-          value: none
-        - name: SERVER_HOSTNAME
-          value: 0.0.0.0
-        - name: SERVER_PORT
-          value: "8080"
-        - name: DB_HOST
-          value: postgres
-        - name: SESSION_DB_NAME
-          value: session
-        - name: AUTHENTICATION_TYPE
-          value: oidc
-        - name: OIDC_CLIENT_ID
-          value: iconrepo
-        - name: OIDC_CLIENT_SECRET
-          value: 1jH1TlxHvnxpHYuj7rMy2floGMPqcPrj
-        - name: OIDC_TOKEN_ISSUER
-          value: http://keycloak:8080/realms/my-realm
-        - name: OIDC_CLIENT_REDIRECT_BACK_URL
-          value: http://iconrepo:8080/openid-callback
-        - name: GITLAB_NAMESPACE_PATH
-          value: ''
-        - name: LOG_LEVEL
-          value: debug
+          value: /etc/config/dev-oidc-basic.json
         ports:
         - name: http
           containerPort: 8080
@@ -82,8 +60,16 @@ spec:
             cpu: "500m"
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        volumeMounts:
+        - name: config-volume
+          mountPath: /etc/config
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
+      volumes:
+        - name: config-volume
+          configMap:
+            name: dev-oidc
+
