[DEV] UI bundle to be served separately II.

--- a/deployments/docker/client/nginx.conf
+++ b/deployments/docker/client/nginx.conf
@@ -13,9 +13,25 @@ http {
 		error_log     /opt/iconrepo/error_log;
 		error_page    404    /404.html;
 
+		location /extra/client-config.json {
+			root /opt/iconrepo/;
+			try_files $uri $uri.html $uri/;
+		}
+
+		location /bundle.js {
+			root /opt/iconrepo/;
+			try_files $uri $uri.html $uri/;
+		}
+
+		location /index {
+			root /opt/iconrepo/;
+			try_files $uri $uri.html $uri/;
+		}
+
 		location / {
 			root /opt/iconrepo/;
-			index index.html;
+			try_files $uri /index.html;
 		}
+
 	}
 }
