--- a/deployments/dev/app/client.yaml
+++ b/deployments/dev/app/client.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   selector:
     app: iconrepo-client
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - name: http
     port: 8080
