--- a/deployments/dev/app/contour-httpproxy/client-httpproxy.yaml
+++ b/deployments/dev/app/contour-httpproxy/client-httpproxy.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   virtualhost:
-    fqdn: iconrepo.local.com
+    fqdn: client.iconrepo.local.com
   routes:
     - conditions:
       - prefix: /
