--- a/deployments/dev/keycloak/keycloak.deployment.yaml
+++ b/deployments/dev/keycloak/keycloak.deployment.yaml
@@ -38,6 +38,8 @@ spec:
         envFrom:
           - configMapRef:
               name: keycloak
+          - secretRef:
+              name: keycloak
         ports:
         - name: http
           containerPort: 8080
