--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.11",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "cross-env": "^7.0.3",
@@ -73,6 +74,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "source-map-loader": "^3.0.0",
     "typesafe-actions": "^5.1.0"
