--- a/deployments/docker/backend/Dockerfile
+++ b/deployments/docker/backend/Dockerfile
@@ -6,14 +6,14 @@ LABEL Version="1.0.0"
 RUN useradd -m --shell /bin/false iconrepo
 
 RUN apt-get update && apt-get install -y git && apt-get clean
-RUN mkdir -p /opt/igo-repo
-WORKDIR /opt/igo-repo
-COPY igo-repo/ ./
-RUN chmod +x igo-repo
+RUN mkdir -p /opt/iconrepo
+WORKDIR /opt/iconrepo
+COPY iconrepo/ ./
+RUN chmod +x iconrepo
 RUN ls -la /opt/
 RUN mkdir "/data"
 EXPOSE 8080
 
 USER iconrepo
 
-CMD [ "/opt/igo-repo/igo-repo" ]
+CMD [ "/opt/iconrepo/iconrepo" ]
