--- a/test/oidc-contextpath-docker/with-docker-compose/docker-compose.yaml
+++ b/test/oidc-contextpath-docker/with-docker-compose/docker-compose.yaml
@@ -38,8 +38,8 @@ services:
             ICON_DATA_LOCATION_GIT: "/data/git-repo"
             ICON_DATA_CREATE_NEW: "init"
             AUTHENTICATION_TYPE: "oidc"
-            OIDC_CLIENT_ID: "igo-repo-1"
-            OIDC_CLIENT_SECRET: "igo-repo-secret-1"
+            OIDC_CLIENT_ID: "iconrepo-1"
+            OIDC_CLIENT_SECRET: "iconrepo-secret-1"
             OIDC_ACCESS_TOKEN_URL: "http://${IDP_HOST}:9001/token"
             OIDC_USER_AUTHORIZATION_URL: "http://${IDP_HOST}:9001/authorize"
             OIDC_CLIENT_REDIRECT_BACK_URL: "http://${APP_HOST}/icons/login"
