--- a/deployments/dev/app/services/backend.yaml
+++ b/deployments/dev/app/services/backend.yaml
@@ -39,6 +39,8 @@ spec:
         imagePullPolicy: Never
         name: iconrepo
         env:
+        - name: LOG_LEVEL
+          value: debug
         - name: ICON_REPO_CONFIG_FILE
           value: /etc/config/config.json
         - name: OIDC_CLIENT_SECRET
