--- a/web/package.json
+++ b/web/package.json
@@ -34,16 +34,19 @@
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.11",
     "@types/redux-logger": "^3.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
-    "eslint": "^8.22.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.31.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "kind-of": ">=6.0.3",
     "nodemon": "^2.0.14",
+    "prettier": "^3.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
@@ -52,11 +55,11 @@
     "stylus-loader": "^6.2.0",
     "ts-loader": "^9.2.6",
     "tslint": "^5.20.1",
-    "typescript": "^4.4.4",
+    "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.62.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
