[DEV] Add curl to docker image for convenience

--- a/deployments/docker/backend/Dockerfile
+++ b/deployments/docker/backend/Dockerfile
@@ -5,7 +5,7 @@ LABEL Version="1.0.0"
 
 RUN useradd -m --shell /bin/false iconrepo
 
-RUN apt-get update && apt-get install -y git && apt-get clean
+RUN apt-get update && apt-get install -y git curl && apt-get clean
 RUN mkdir -p /opt/iconrepo
 WORKDIR /opt/iconrepo
 COPY iconrepo/ ./
