--- a/deployments/dev/app/contour-httpproxy/cdn-origin/cdn-httpproxy.yaml
+++ b/deployments/dev/app/contour-httpproxy/cdn-origin/cdn-httpproxy.yaml
@@ -30,3 +30,9 @@ spec:
       services:
         - name: iconrepo
           port: 8080
+      responseHeadersPolicy:
+        set:
+        - name: Content-Security-Policy
+          value: "default-src 'self'; script-src-elem 'self' unpkg.com; style-src 'self' 'unsafe-inline'"
+        - name: Strict-Transport-Security
+          value: max-age=31536000; includeSubDomains
