--- a/deployments/dev/app/manifests/backend.yaml
+++ b/deployments/dev/app/manifests/backend.yaml
@@ -41,7 +41,7 @@ spec:
         env:
         - name: LOG_LEVEL
           value: debug
-        - name: ICON_REPO_CONFIG_FILE
+        - name: ICONREPO_CONFIG_FILE
           value: /etc/config/config.json
         - name: OIDC_CLIENT_SECRET
           valueFrom:
