--- a/deployments/dev/app/contour-httpproxy/cdn-origin/cdn-httpproxy.yaml
+++ b/deployments/dev/app/contour-httpproxy/cdn-origin/cdn-httpproxy.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   virtualhost:
-    fqdn: iconrepo.local.com
+    fqdn: iconrepo.internal
   routes:
     - conditions:
       - prefix: /api
