[DEV] Convert makefile and scripts to taskfiles

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
 .vscode
 .DS_Store
 /node_modules/
+/web/dist/
 /build/
 /docker/dist/
 /log
-/iconrepo
+/cmd/iconrepo
 /backend
-/deploy/dist/
+/deployments/dev/app/configs/config.json
 /output
 /tmp/config
 /**/tmp/
+.task/
 .terraform/
 .terraform.lock*
 terraform.tfstate*
