--- a/deployments/dev/keycloak/keycloak.yaml
+++ b/deployments/dev/keycloak/keycloak.yaml
@@ -39,3 +39,19 @@ spec:
           limits:
             memory: "2048Mi"
             cpu: "500m"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: keycloak
+  labels:
+    app: keycloak
+spec:
+  ports:
+  - name: http
+    port: 8080
+    targetPort: 8080
+  selector:
+    app: keycloak
+  type: ClusterIP
+
